--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,39 @@
   padding: 0;
   font-family: "Jost", sans-serif;
 }
+body {
+  background: #0d0d0d !important;
+  overflow-x: hidden;
+}
+html, body, #root {
+  position: relative;
+  scroll-behavior: smooth;
+}
+
+
+.starry-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent url('./assets/bo-play.png') repeat !important;
+  z-index: -1;
+  animation: moveStars 60s linear infinite;
+  opacity: 0.3;
+}
+
+@keyframes moveStars {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 10000px 10000px;
+  }
+}
+
+
+
 .loader {
   position: relative;
   width: 100px;
